src/main/java/org/example/MyWitcher/pattern/structural/facade/good/Job.java
package org.example.MyWitcher.pattern.structural.facade.good;

public class Job {
    public void doJob(){
        System.out.println("Job in progress ...");
    }
}
