src/main/java/org/example/MyWitcher/pattern/structural/facade/bad/Job.java
package org.example.MyWitcher.pattern.structural.facade.bad;

public class Job {
    public void doJob(){
        System.out.println("Job in progress ...");
    }
}
